# os-template

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
bootloader/: CMakeLists.txt
bootloader/src/: BootContext.cpp  BootContext.h  FileLoader.cpp  FileLoader.h  ImageLoader.cpp  ImageLoader.h  main.cpp
docs/: Bugcheck.md
drivers/: CMakeLists.txt
drivers/BootVideo/: CMakeLists.txt
drivers/BootVideo/include/: BootVideo.h
drivers/BootVideo/src/: font.cpp  main.cpp
kernel/: CMakeLists.txt
kernel/src/: crtstub.cpp  kinit.cpp  kinit.h  main.cpp  process.cpp  process.h
kernel/src/cpu/: interrupts.cpp  interrupts.h
kernel/src/dbg/: bugcheck.cpp  bugcheck.h  kasan.cpp  kasan.h  kassert.cpp  kassert.h
kernel/src/device/: device.h  dma.h  pcie.cpp  pcie.h  usb.cpp  usb.h
kernel/src/memory/: kheap.cpp  kheap.h  pallocator.cpp  pallocator.h  vallocator.cpp  vallocator.h
kernel/src/object/: object.cpp  object.h  objecttypes.h
kernel/src/perf/: sysmetrics.cpp  sysmetrics.h
kernel/src/process/: process.cpp  process.h  taskScheduler.cpp  taskScheduler.h  thread.h
scripts/: copy-files.bat  run.bat  runarm64.bat  runx8632.bat  runx8664.bat
src/: main.cpp
utilities/: CMakeLists.txt
utilities/include/utils/: PE.h  arch.h  cpu.h  error.h  identify.h  kdbg.h  memory.h  operations.h  struct.h
utilities/source/: cpu.cpp  exceptions_arm64.S  exceptions_arm64.asm  interrupts_x64.asm  interrupts_x64.s  interrupts_x86.asm  interrupts_x86.s  memory.cpp  operations.cpp  paging.cpp
