cmake_minimum_required(VERSION 3.20)

if(DEFINED CACHE{CMAKE_SYSTEM_PROCESSOR})
    set(TARGET_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR})
endif()

project(OperatingSystemTemplate CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    string(REPLACE "/RTC1" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/RTCc" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/RTCs" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/RTCu" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/D_DEBUG" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "-D_DEBUG" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/MDd" "/MD" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/MTd" "/MT" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    string(REPLACE "/Ob0" "/Ob1" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    
    if(MSVC)
        string(APPEND CMAKE_CXX_FLAGS_DEBUG " /Zi")
    elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        string(APPEND CMAKE_CXX_FLAGS_DEBUG " -g")
    endif()
    
    # Do the same for linker flags
    string(REPLACE "--dependent-lib=msvcrtd" "" CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
    string(REPLACE "-lmsvcrtd" "" CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
endif()

if(DEFINED TARGET_PROCESSOR)
    set(DETECTED_PROCESSOR ${TARGET_PROCESSOR})
else()
    set(DETECTED_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR})
endif()

add_subdirectory(bootloader)
add_subdirectory(utilities)
add_subdirectory(kernel)
